feat: Dockerfile, env-driven CORS, health endpoint, improved login page
- Multi-stage Dockerfile for Render deployment (small JRE image, fast cold starts)
- render.yaml switched to Docker-based deployment
- CORS config now reads allowed origins from env var
- /api/health endpoint for uptime monitoring
- Favicon replaced with flame icon matching sidebar branding
- Auth card has fixed height to prevent layout shift
- Registration errors now show specific messages from backend
- Swagger disabled in prod profile
- .dockerignore for faster builds